--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "bootstrap": "^4.1.3",
+    "bootstrap-icons": "^1.9.1",
     "chart.js": "^3.7.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.6.0",
     "ngx-bootstrap": "^8.0.0",
+    "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
